--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         .emoji {
             width: 100px;
-            height: 100px;
+            height: auto;
             margin: 0 auto 20px;
             display: block;
         }
@@ -59,4 +59,5 @@
         <p>Still working on this. This'll be a lore-focused character hub for my OCs.</p>
     </div>
 </body>
+
 </html>
