--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
     <div class="container">
         <img class="emoji" src="https://i.pinimg.com/originals/d8/0f/b4/d80fb4ddd8b4dda84706cf53b0b20095.gif" alt="Icon">
         <h1>Hi!</h1>
-        <p>Still working on this. This'll be a lore-focused character hub for my OCs.</p>
+        <p>Still working on this.</p>
+        <p>This'll be a lore-focused character hub for my OCs.</p>
     </div>
 </body>
 
 </html>
+
 
 
